--- a/templates/student/lesson/D05.html
+++ b/templates/student/lesson/D05.html
@@ -1,4 +1,4 @@
-<div id="doc" class="markdown-body container-fluid"><h1 id="Lecture-5-萬有引力定律與克卜勒行星運動定律"><a class="anchor hidden-xs" href="#Lecture-5-萬有引力定律與克卜勒行星運動定律" title="Lecture-5-萬有引力定律與克卜勒行星運動定律"><span class="octicon octicon-link"></span></a>Lecture 5 萬有引力定律與克卜勒行星運動定律</h1><blockquote>
+    <div id="doc" class="markdown-body container-fluid" style="position: relative;"><h1 id="Lecture-5-萬有引力定律與克卜勒行星運動定律"><a class="anchor hidden-xs" href="#Lecture-5-萬有引力定律與克卜勒行星運動定律" title="Lecture-5-萬有引力定律與克卜勒行星運動定律"><span class="octicon octicon-link"></span></a>Lecture 5 萬有引力定律與克卜勒行星運動定律</h1><blockquote>
 <p>建國高中特色選修課程 - 物理現象的程式設計與模擬<br>
 作者：賴奕帆<br>
 日期：2018/8/01</p>
@@ -340,7 +340,7 @@ oval = curve( color = color.black )
 </li>
 </ul>
 <p><a href="https://hackmd.io/s/SJU-OSymQ" target="_blank"># Lecture 5 作業完整參考解法</a></p>
-</div></div>
+</div><div dir="ltr" class="resize-sensor" style="position: absolute; left: -10px; top: -10px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden;"><div class="resize-sensor-expand" style="position: absolute; left: -10px; top: -10px; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"><div style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 100000px; height: 100000px;"></div></div><div class="resize-sensor-shrink" style="position: absolute; left: -10px; top: -10px; right: 0; bottom: 0; overflow: hidden; z-index: -1; visibility: hidden;"><div style="position: absolute; left: 0; top: 0; transition: 0s; width: 200%; height: 200%"></div></div></div></div>
     <div class="ui-toc dropup unselectable hidden-print" style="display:none;">
         <div class="pull-right dropdown">
             <a id="tocLabel" class="ui-toc-label btn btn-default" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" title="Table of content">
@@ -351,6 +351,7 @@ oval = curve( color = color.black )
             </ul>
         </div>
     </div>
-    <div id="ui-toc-affix" class="ui-affix-toc ui-toc-dropdown unselectable hidden-print" data-spy="affix" style="top:77px; left:930px; display:inline;">
+    <div id="ui-toc-affix" class="ui-affix-toc ui-toc-dropdown unselectable hidden-print" data-spy="affix" style="top:17px;display:none;"  >
         <div class="toc"><ul class="nav"><li class=""><a href="#Lecture-5-萬有引力定律與克卜勒行星運動定律" title="Lecture 5 萬有引力定律與克卜勒行星運動定律">Lecture 5 萬有引力定律與克卜勒行星運動定律</a><ul class="nav"><li><a href="#一、萬有引力定律" title="一、萬有引力定律">一、萬有引力定律</a><ul class="nav"><li><a href="#Example-1--衛星受地球萬有引力吸引落下" title="Example 1 : 衛星受地球萬有引力吸引落下">Example 1 : 衛星受地球萬有引力吸引落下</a></li><li><a href="#加入圖表觀察萬有引力" title="加入圖表觀察萬有引力">加入圖表觀察萬有引力</a></li></ul></li><li><a href="#二、克卜勒行星第一定律-一-圓形軌道衛星" title="二、克卜勒行星第一定律  (一) 圓形軌道衛星">二、克卜勒行星第一定律  (一) 圓形軌道衛星</a><ul class="nav"><li><a href="#在程式碼中加入衛星速度，觀察衛星運動" title="在程式碼中加入衛星速度，觀察衛星運動">在程式碼中加入衛星速度，觀察衛星運動</a></li></ul></li><li><a href="#三、克卜勒行星第一定律-二-橢圓軌道衛星" title="三、克卜勒行星第一定律  (二) 橢圓軌道衛星">三、克卜勒行星第一定律  (二) 橢圓軌道衛星</a><ul class="nav"><li><a href="#將Vpython中的正圓形軌道改成橢圓形軌道" title="將Vpython中的正圓形軌道改成橢圓形軌道">將Vpython中的正圓形軌道改成橢圓形軌道</a></li><li><a href="#利用Lecture-2「三點記錄法」找橢圓四個端點" title="利用Lecture 2「三點記錄法」找橢圓四個端點">利用Lecture 2「三點記錄法」找橢圓四個端點</a></li></ul></li><li><a href="#四、克卜勒行星第一定律-三-描繪出橢圓形軌道" title="四、克卜勒行星第一定律  (三) 描繪出橢圓形軌道">四、克卜勒行星第一定律  (三) 描繪出橢圓形軌道</a><ul class="nav"><li><a href="#利用curve繪製橢圓，看衛星是否在橢圓軌道上運行" title="利用curve繪製橢圓，看衛星是否在橢圓軌道上運行">利用curve繪製橢圓，看衛星是否在橢圓軌道上運行</a></li></ul></li><li><a href="#五、克卜勒行星第二定律---利用海龍公式計算面積" title="五、克卜勒行星第二定律 - 利用海龍公式計算面積">五、克卜勒行星第二定律 - 利用海龍公式計算面積</a><ul class="nav"><li><a href="#將海龍公式，寫進前述橢圓軌道的程式之中" title="將海龍公式，寫進前述橢圓軌道的程式之中">將海龍公式，寫進前述橢圓軌道的程式之中</a></li></ul></li><li><a href="#六、克卜勒行星第二定律-一-利用海龍公式計算面積" title="六、克卜勒行星第二定律  (一) 利用海龍公式計算面積">六、克卜勒行星第二定律  (一) 利用海龍公式計算面積</a><ul class="nav"><li><a href="#在if判別內，加入繪製直線" title="在if判別內，加入繪製直線">在if判別內，加入繪製直線</a></li></ul></li><li><a href="#Lecture-5-課堂作業" title="Lecture 5 課堂作業">Lecture 5 課堂作業</a><ul class="nav"><li><a href="#課堂作業-5-1" title="課堂作業 5-1">課堂作業 5-1</a></li><li><a href="#課堂作業-5-2" title="課堂作業 5-2">課堂作業 5-2</a></li><li><a href="#課堂作業-5-3" title="課堂作業 5-3">課堂作業 5-3</a></li><li><a href="#進階作業-5-1" title="進階作業 5-1">進階作業 5-1</a></li><li><a href="#進階作業-5-2" title="進階作業 5-2">進階作業 5-2</a></li></ul></li></ul></li></ul></div><div class="toc-menu"><a class="expand-toggle" href="#">Expand all</a><a class="back-to-top" href="#">Back to top</a><a class="go-to-bottom" href="#">Go to bottom</a></div>
     </div>
+
