--- a/templates/student/lessonD.html
+++ b/templates/student/lessonD.html
@@ -28,7 +28,7 @@
   <br />
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
-      {% include "student/lesson/C01.html" %}
+      {% include "student/lesson/D01.html" %}
     </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
       <iframe width="880" height="520" src="https://www.youtube.com/embed/vIvCIH3-CIw?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
@@ -60,7 +60,7 @@
   <br />
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
-      {% include "student/lesson/C02.html" %}
+      {% include "student/lesson/D02.html" %}
     </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
       <iframe width="880" height="520" src="https://www.youtube.com/embed/572yOF407vw?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
@@ -93,7 +93,7 @@
   <br />
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
-      {% include "student/lesson/C03.html" %}
+      {% include "student/lesson/D03.html" %}
     </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
       <iframe width="880" height="520" src="https://www.youtube.com/embed/V-8X00C87Hc?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
@@ -126,7 +126,7 @@
   <br />
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
-      {% include "student/lesson/C04.html" %}
+      {% include "student/lesson/D04.html" %}
     </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
       <iframe width="880" height="520" src="https://www.youtube.com/embed/f1pro89-034?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
@@ -223,7 +223,7 @@
   <br />
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
-      {% include "student/lesson/C07.html" %}
+      {% include "student/lesson/D07.html" %}
     </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
       <iframe width="880" height="520" src="https://www.youtube.com/embed/N9ltuPIfaok?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
@@ -256,7 +256,7 @@
   <br />
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
-      {% include "student/lesson/C08.html" %}
+      {% include "student/lesson/D08.html" %}
     </div>
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
       <iframe width="880" height="520" src="https://www.youtube.com/embed/UxrPUcbbEjs?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
