--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -735,6 +735,8 @@ function MM_swapImage() { //v3.0
 
   
   {% elif subject_id == "F" %}  
+  
+學習程式設計，並不是抱著一本書死K就能學得好，學習是有策略，有方法的，高老師幫大家挑選了幾本對於學習有關的書目，希望同學們看了之後，能夠找到把程式設計學好的方便法門，並進一步也能夠類推，把學校其它課業也學好。
 <table class="table">
 <tr>
 <td>
