--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -383,6 +383,7 @@ function MM_swapImage() { //v3.0
 <a href='https://www.freepik.com/free-vector/colorful-business-icons_793959.htm'>Designed by Freepik</a>  
 {% elif subject_id == "D" %}
 <img src="/static/images/ck/ck.png"><BR>
+<a href="https://hackmd.io/s/BJ2jKMbf7" target="_blank" role="btn" class="btn">安裝與測試</a>
 		<table style="border:0px; width:900px;">    
   <tr>
 <td>  
