--- a/templates/account/about.html
+++ b/templates/account/about.html
@@ -39,7 +39,7 @@
     <p class="card-text">
         <Table class="table" style="width:100%">
     <Tr><td>國立臺灣師範大學資訊教育學系學士83級</td></Tr>    
-    <Tr><td>國立臺灣師範大學資訊教育研究所碩士</td></Tr>
+    <Tr><td>國立臺灣師範大學資訊教育研究所碩士<BR>電腦科學教育實驗室</td></Tr>
     <Tr><td>國立臺灣師範大學資訊教育研究所博士<BR>電腦科學教育實驗室</td></Tr>      	
   </Table>
     </p>
