--- a/templates/account/contact.html
+++ b/templates/account/contact.html
@@ -11,8 +11,7 @@
     <p class="card-text">
         <Table class="table" style="width:100%">     
     <Tr>
-      <td>Email</td><td>koma@mail.nksh.tp.edu.tw</td></Tr>    
-    <Tr><td>Facebook</td><td>https://www.facebook.com/ntnujean</td></Tr>              
+      <td>Email</td><td>koma@mail.nksh.tp.edu.tw</td></Tr>       
   </Table>
     </p>
   </div>
@@ -22,14 +21,13 @@
 <img class="imgl" src="/static/images/about/dinowei.png">
 
 <div class="card">
-  <h5 class="card-header">魏仲良(臺北市立大直高中圖書館主任)</h5>
+  <h5 class="card-header">魏仲良(臺北市立大直高中資訊教師)</h5>
   <div class="card-body">
     <h5 class="card-title">連絡方式</h5>
     <p class="card-text">
         <Table class="table" style="width:100%">     
     <Tr>
       <td>Email</td><td>dreamer@dcsh.tp.edu.tw</td></Tr>    
-    <Tr><td>Facebook</td><td>https://www.facebook.com/idreamer.tw</td></Tr>    	
   </Table>
     </p>
   </div>
