--- a/templates/student/lessonD.html
+++ b/templates/student/lessonD.html
@@ -35,7 +35,7 @@
     </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=1 %}
+      {% include "student/submitC.html" with index=1 %}
     </div>
     {% endif %}	
   </div>
@@ -67,7 +67,7 @@
     </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=2 %}
+      {% include "student/submitC.html" with index=2 %}
     </div>
     {% endif %}	
   </div>
@@ -100,7 +100,7 @@
     </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=3 %}
+      {% include "student/submitC.html" with index=3 %}
     </div>
     {% endif %}	
   </div>
@@ -133,7 +133,7 @@
     </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=4 %}
+      {% include "student/submitC.html" with index=4 %}
     </div>
     {% endif %}	
   </div>
@@ -165,7 +165,7 @@
     </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=5 %}
+      {% include "student/submitC.html" with index=5 %}
     </div>
     {% endif %}	
   </div>
@@ -197,7 +197,7 @@
     </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=6 %}
+      {% include "student/submitC.html" with index=6 %}
     </div>
     {% endif %}	
   </div>
@@ -230,7 +230,7 @@
     </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=7 %}
+      {% include "student/submitC.html" with index=7 %}
     </div>
     {% endif %}	
   </div>
@@ -263,7 +263,7 @@
     </div>
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=8 %}
+      {% include "student/submitC.html" with index=8 %}
     </div>
     {% endif %}	
   </div>
@@ -294,7 +294,7 @@
     </div> -->
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=9 %}
+      {% include "student/submitC.html" with index=9 %}
     </div>
     {% endif %}	
   </div>
@@ -325,7 +325,7 @@
     </div>-->
     {% if user.is_authenticated %}
     <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-      {% include "student/submitB.html" with index=10 %}
+      {% include "student/submitC.html" with index=10 %}
     </div>
     {% endif %}	
   </div>
