--- a/templates/teacher/score_peer.html
+++ b/templates/teacher/score_peer.html
@@ -7,7 +7,7 @@
                 <tr>
                 <td>
                 {% if list.1.memo %} 
-                        <a href="/teacher/scoring/{{lesson}}/{{classroom_id}}/{{list.0.id}}/{{index}}">{{list.0.first_name}}
+                        <a href="/teacher/scoring/{{typing}}/{{lesson}}/{{classroom_id}}/{{list.0.id}}/{{index}}">{{list.0.first_name}}
                     {% if list.1.score > 0 %}
                         ({{list.1.score}}-{{list.3}})
                     {%  endif %}
