--- a/templates/student/show.html
+++ b/templates/student/show.html
@@ -31,9 +31,17 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
     尚未繳交
   {% endif %}
 
-
-
-{% elif lesson == "2" or lesson == "3" or lesson == "4" or lesson == "5" %}
+{% elif lesson == "4" %}
+  {% if work %}
+    {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
+    <div>心得感想：</div>
+    <div>{{ work.memo }}</div>
+    <div>Youtube：</div>
+    <div><iframe width="800" height="480" src="https://www.youtube.com/embed/{{ work.youtube|video }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+  {% else %}
+    尚未繳交
+  {% endif %}
+{% elif lesson == "2" or lesson == "3" or lesson == "5" %}
   {% if work %}
     {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
     <div>心得感想：</div>
@@ -50,6 +58,7 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
   {% else %}
     尚未繳交
   {% endif %}
+
 {% endif %}
 {% endblock %}
 
