--- a/templates/teacher/scoring.html
+++ b/templates/teacher/scoring.html
@@ -55,6 +55,31 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
      {% else %}
         尚未繳交
     {% endif %}
+          
+  {% elif lesson == "4" %}
+    <br>
+    {% if work.memo %}
+        <font color=black>心得感想：</font><BR>
+        {{work.memo}}
+        <br>
+        <font color=black>Youtube：</font><BR>       
+        <iframe width="800" height="480" src="https://www.youtube.com/embed/{{ work.youtube|video }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <form action="" enctype="multipart/form-data"  method="post">
+            <table class="table" style="width:300px">
+                <tr><th><label for="id_score">分數:</label></th><td>{{form.score}}</td></tr>
+              {% if teacher %}
+<tr><td colspan=2><span class="button-checkbox">
+        <button type="button" class="btn" data-color="primary" style="width:100%">設為小老師</button>
+        <input type="checkbox" style="display: none;" name="assistant"/>
+    </span></td></tr>          
+              {% endif %}
+              <tr><td colspan=2><input type="submit" value="Submit"></td></tr>
+            </table>
+           {% csrf_token %}
+    {% else %}
+        尚未繳交
+    {% endif %}
+         
   {% else %}
     <br>
     {% if work.code %}
