fix form control height

--- a/templates/base.html
+++ b/templates/base.html
@@ -136,6 +136,7 @@ Licence URI: http://www.os-templates.com/template-terms
   });
   $('form>p').addClass('form-group form-inline');
   $('input, select, textarea').addClass('form-control');
+  $('input[type="file"]').css("height", "auto");
   $(document).ready(function(){
 		$(window).scroll(function(){
 			if ($(this).scrollTop() > 100) {
