--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -20,6 +20,7 @@
               <p style="padding:0px; margin:2px;">
                 <a href="/teacher/classroom/edit/{{classroom.id}}" role="button" class="btn btn-success">修改</a>
                 <a href="/student/classmate/{{classroom.id}}" role="button" class="btn btn-success">學生</a>
+                <a href="/teacher/classroom/assistant/{{classroom.id}}" role="button" class="btn btn-success">助教</a>                
                 <a href="/student/group/{{classroom.id}}" role="button" class="btn btn-success">組別</a>
                 <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>
 							  <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">指定作業</a>
