--- a/templates/teacher/assistant_list.html
+++ b/templates/teacher/assistant_list.html
@@ -3,7 +3,7 @@
 {% block content %}
         {% for classroom in classrooms %}
   <div class="card card-default">
-  <div class="card-header">{{classroom.name}}({{classroom.password}})--{{classroom.teacher_id|realname}}老師</div>
+  <div class="card-header">{{classroom.name}}({{classroom.lesson_choice}})--{{classroom.teacher_id|realname}}老師</div>
   <div class="card-body">
                 <a href="/student/classmate/{{classroom.id}}" class="btn btn-default" role="btn"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> 學生</a>
                 <a href="/teacher/announce/{{classroom.id}}" class="btn btn-primary" role="btn"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> 公告</a>  
@@ -13,10 +13,8 @@
     <a href="/teacher/work/{{classroom.id}}" class="btn btn-primary" role="btn"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span> 專題</a>
 -->  
   </div>
-
+</div>
   {% endfor %}
     		{% load pagination %}
-        {% get_pagination %}
-          </div>
-  
+        {% get_pagination %}  
 {% endblock %}
