--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -22,11 +22,12 @@
                 <a href="/student/classmate/{{classroom.id}}" role="button" class="btn btn-success">學生</a>
                 <a href="/teacher/classroom/assistant/{{classroom.id}}" role="button" class="btn btn-success">助教</a>                
                 <a href="/student/group/{{classroom.id}}" role="button" class="btn btn-success">組別</a>
-                <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>
 							  <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">指定作業</a>
 							  <a href="/teacher/work2/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">自訂作業</a>                
+							  <a href="/teacher/work3/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">檢核作業</a>                
                </p>
               <p style="padding:0px; margin:2px;">
+                <a href="/teacher/announce/{{classroom.id}}" role="button" class="btn btn-success">公告</a>                
                 <a href="/survey/pre_survey{{classroom.lesson}}/teacher/{{classroom.id}}" role="button" class="btn btn-success">課前問卷</a>
 			  				<a href="/survey/post_survey{{classroom.lesson}}/teacher/{{classroom.id}}" role="button" class="btn btn-success">課後問卷</a>
 							  <a href="/teacher/work1/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">小老師</a>
