--- a/templates/student/lessonD.html
+++ b/templates/student/lessonD.html
@@ -287,7 +287,7 @@
   <br />
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
-      {% include "student/lesson/C09.html" %}
+      {% include "student/lesson/D09.html" %}
     </div><!--
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
       <iframe width="880" height="520" src="https://www.youtube.com/embed/3ogEU4NR81A?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
