--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -384,6 +384,7 @@ function MM_swapImage() { //v3.0
 {% elif subject_id == "D" %}
 <img src="/static/images/ck/ck.png"><BR>
 <a href="https://hackmd.io/s/BJ2jKMbf7" target="_blank" role="btn" class="btn">安裝與測試</a>
+<a href="https://www.youtube.com/watch?v=dWHNBe6R6LQ" target="_blank" role="btn" class="btn">安裝教學影片</a>
 		<table style="border:0px; width:900px;">    
   <tr>
 <td>  
