--- a/static/starrr/starrr.css
+++ b/static/starrr/starrr.css
@@ -9,3 +9,7 @@
     color: #FFD119;
     text-decoration: none;
 }
+
+.starrr.readonly a{color: dimgrey}
+.pos-relative {position: relative}
+.starrr.edit {position: absolute; width: 100%; height: 100%; left: 0; top: 0}
