--- a/templates/student/classroom.html
+++ b/templates/student/classroom.html
@@ -2,8 +2,7 @@
 {% load tag %}
 {% block content %}
         <a href="/student/classroom/add" role="button" class="btn btn-info active">加入班級</a><BR><BR>
-        
-        {% for enroll, shows in classrooms %}
+{% for enroll, shows in classrooms %}
 <div class="card">
   <h5 class="card-header">{{enroll.classroom}} ({{enroll.classroom.lesson_choice}})：{{enroll.seat}}號</h5>
   <div class="card-body">
@@ -19,13 +18,18 @@
 	        <a href="/student/work/0/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">指定作業</a>
 {% if not enroll.classroom.lesson == 1 %}
 			<a href="/student/progress/0/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">進度</a>
-{% endif %}
+{% endif %} 
 	        <a href="/student/work/1/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">自訂作業</a>
 {% if not enroll.classroom.lesson == 1 %}
      	<a href="/student/progress/1/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">進度</a>
-			<a href="/certificate/cert/classroom/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">證書</a>         
 {% endif %}
 	        <a href="/student/work/2/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">檢核作業</a>  
+{% if not enroll.classroom.lesson == 1 %}
+     	<a href="/student/progress/2/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">進度</a>
+{% endif %}
+{% if not enroll.classroom.lesson == 1 %}
+			<a href="/certificate/cert/classroom/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">證書</a>         
+{% endif %}
 {% if enroll.classroom.lesson == 1 %}
 			<BR><BR>作業進度：
 			<a href="/student/progress/0/{{enroll.classroom.lesson}}/1/{{enroll.classroom.id}}/" role="button" class="btn btn-success">12堂課</a>
@@ -68,6 +72,6 @@
   </div>
 </div>
 <BR>        
-        {% endfor %}
+{% endfor %}
 
 {% endblock %}
